# gmod-discord-rpc

./: .gitmodules  BUILDING.md  LICENSE  README.md  glualint.json
.github/workflows/: clangformat.yml  cmake.yml  glualint.yml
cpp/: CMakeLists.txt  CMakeSettings.json  GRPCTest.cpp
lua/: cl_discord.lua
